Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -88,38 +88,47 @@
         "    with out_log: print(f\"Debug Error: {e}\")"
       ],
       "metadata": {
-        "id": "20ACDMrZi0o_",
-        "outputId": "2faf42fc-be86-435d-86fb-8d82e2b8f7a1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 109
-        }
+        "id": "20ACDMrZi0o_"
       },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (ipython-input-1391526803.py, line 20)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1391526803.py\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    else: with out_log: print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# @title ⚙️ CORE SYSTEM (Must actviate once)\n",
+        "# @title ⚙️ CORE SYSTEM (Original Power Model)\n",
         "import time, requests, json, zipfile, io, os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import LSTM, Dense, Bidirectional, Dropout\n",
+        "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.callbacks import Callback\n",
         "\n",
         "BACKEND = \"https://apilotto.euroceiling39.ru\"\n",
+        "\n",
+        "# --- ORIIGNAL POWER MODEL ---\n",
+        "def create_model(input_shape, learning_rate=0.001):\n",
+        "    model = Sequential()\n",
+        "    # Layer 1\n",
+        "    model.add(Bidirectional(LSTM(240, input_shape=input_shape, return_sequences=True)))\n",
+        "    model.add(Dropout(0.2))\n",
+        "    # Layer 2\n",
+        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
+        "    model.add(Dropout(0.2))\n",
+        "    # Layer 3\n",
+        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
+        "    # Layer 4\n",
+        "    model.add(Bidirectional(LSTM(240, return_sequences=False)))\n",
+        "    model.add(Dropout(0.2))\n",
+        "\n",
+        "    # Output Layers\n",
+        "    model.add(Dense(49))              # Intermediate Dense\n",
+        "    model.add(Dense(input_shape[1]))   # Final Output (7 numbers: 6 + Super)\n",
+        "\n",
+        "    model.compile(optimizer=Adam(learning_rate=learning_rate), loss=\"mse\", metrics=[\"accuracy\"])\n",
+        "    return model\n",
         "\n",
         "def run_lotto_logic(ui):\n",
         "    btn, txt, log_out, bar = ui['btn'], ui['txt'], ui['log'], ui['bar']\n",
@@ -133,16 +142,14 @@
         "\n",
         "    uid = txt.value.strip()\n",
         "    if not uid:\n",
-        "        log(\"❌ FEHLER: Keine User ID!\")\n",
-        "        btn.disabled = False\n",
-        "        return\n",
+        "        log(\"❌ FEHLER: Keine User ID!\"); btn.disabled = False; return\n",
         "\n",
         "    try:\n",
-        "        log(f\"🚀 Starte für User: {uid}\")\n",
+        "        log(f\"🚀 Starte Heavy Analyse für: {uid}\")\n",
         "        bar.value = 5\n",
         "\n",
         "        # 1. Daten laden\n",
-        "        log(\"📥 Lade Archiv...\")\n",
+        "        log(\"📥 Lade 10 Jahre Archivdaten...\")\n",
         "        r = requests.get(\"https://www.lotto-bayern.de/static/gamebroker_2/de/download_files/archiv_lotto.zip\", timeout=30)\n",
         "        with zipfile.ZipFile(io.BytesIO(r.content)) as z: z.extractall(\"/content/lotto_temp\")\n",
         "\n",
@@ -153,11 +160,11 @@
         "                if len(p)>10 and int(p[2])>=2013: rows.append(p[3:10])\n",
         "\n",
         "        df = pd.DataFrame(rows).apply(pd.to_numeric, errors='coerce').dropna()\n",
-        "        vals = df.values; vals[:,:6] = np.sort(vals[:,:6], axis=1)\n",
+        "        vals = df.values; vals[:,:6] = np.sort(vals[:,:6], axis=1) # Sort 6 main numbers\n",
         "\n",
-        "        # 2. Training\n",
-        "        log(\"🧠 Training KI Modell...\")\n",
-        "        bar.value = 20\n",
+        "        # 2. Preprocessing\n",
+        "        bar.value = 15\n",
+        "        log(\"⚙️ Preprocessing & Windowing (Win=24)...\")\n",
         "\n",
         "        scaler = StandardScaler().fit(vals)\n",
         "        scaled = scaler.transform(vals)\n",
@@ -165,40 +172,58 @@
         "        X = np.array([scaled[i:i+win] for i in range(len(scaled)-win)])\n",
         "        y = np.array([scaled[i+win] for i in range(len(scaled)-win)])\n",
         "\n",
-        "        model = Sequential([\n",
-        "            Bidirectional(LSTM(128, return_sequences=True), input_shape=(win,7)),\n",
-        "            Dropout(0.2), Bidirectional(LSTM(64)), Dense(7)\n",
-        "        ])\n",
-        "        model.compile(optimizer='adam', loss='mse')\n",
+        "        # 3. Model Build\n",
+        "        log(\"🏗️ Baue Deep Learning Architektur (4x Bidirectional LSTM)...\")\n",
+        "        input_shape = (win, 7)\n",
+        "        model = create_model(input_shape)\n",
+        "\n",
+        "        # 4. Training (Heavy)\n",
+        "        EPOCHS = 123\n",
+        "        BATCH = 98\n",
         "\n",
         "        class P(Callback):\n",
-        "            def on_epoch_end(s,e,l): bar.value = 20 + int(70 * (e/60))\n",
+        "            def on_epoch_end(s,e,l):\n",
+        "                pct = int(20 + 75 * ((e+1)/EPOCHS))\n",
+        "                bar.value = pct\n",
+        "                if e % 20 == 0: log(f\"   Epoch {e+1}/{EPOCHS} loss={l['loss']:.4f}\")\n",
         "\n",
-        "        model.fit(X, y, epochs=60, batch_size=64, verbose=0, callbacks=[P()])\n",
+        "        log(f\"🧠 Starte Training ({EPOCHS} Epochen)... Geduld bitte.\")\n",
+        "        model.fit(X, y, epochs=EPOCHS, batch_size=BATCH, verbose=0, callbacks=[P()])\n",
         "\n",
-        "        # 3. Prognose\n",
-        "        last = scaled[-win:].reshape(1,win,7)\n",
-        "        pred = scaler.inverse_transform(model.predict(last))[0]\n",
-        "        nums = sorted([min(49,max(1,int(round(x)))) for x in pred[:6]])\n",
-        "        sz = min(9,max(0,int(round(pred[6]))))\n",
+        "        # 5. Prognose\n",
+        "        log(\"🔮 Berechne Vorhersage...\")\n",
+        "        last_window = scaled[-win:].reshape(1, win, 7)\n",
+        "        pred_scaled = model.predict(last_window)\n",
+        "        pred = scaler.inverse_transform(pred_scaled)[0]\n",
         "\n",
-        "        log(f\"✅ Prognose: {nums} [SZ: {sz}]\")\n",
-        "        bar.value = 95\n",
+        "        # Post-Processing (Runden & Bounds)\n",
+        "        nums = [int(round(x)) for x in pred[:6]]\n",
+        "        nums = sorted([min(49, max(1, x)) for x in nums]) # 1-49\n",
+        "        sz = min(9, max(0, int(round(pred[6]))))   # 0-9\n",
         "\n",
-        "        # 4. Senden\n",
-        "        log(\"📡 Sende an App...\")\n",
-        "        res = requests.post(f\"{BACKEND}/api/colab/update\", json={\n",
-        "            \"userId\": uid, \"numbers\": nums, \"generated_at\": int(time.time())\n",
-        "        })\n",
+        "        log(f\"✅ ERGEBNIS: {nums} [Super: {sz}]\")\n",
+        "        bar.value = 98\n",
+        "\n",
+        "        # 6. Senden\n",
+        "        log(f\"📡 Upload zu App...\")\n",
+        "        final_nums = nums\n",
+        "\n",
+        "        payload = {\n",
+        "            \"userId\": uid,\n",
+        "            \"numbers\": final_nums,\n",
+        "            \"generated_at\": int(time.time()),\n",
+        "            \"model\": \"LSTM-Deep-v1\"\n",
+        "        }\n",
+        "        res = requests.post(f\"{BACKEND}/api/colab/update\", json=payload)\n",
         "\n",
         "        if res.ok:\n",
-        "            log(\"🎉 ERFOLG! Daten in App verfügbar.\")\n",
+        "            log(\"🎉 ERFOLG! Deine Zahlen sind in der App.\")\n",
         "            bar.value = 100\n",
         "        else:\n",
         "            log(f\"⚠️ Server Fehler: {res.status_code}\")\n",
         "\n",
         "    except Exception as e:\n",
-        "        log(f\"Error: {e}\")\n",
+        "        log(f\"💥 CRITICAL ERROR: {e}\")\n",
         "\n",
         "    btn.disabled = False"
       ],
