Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -21,11 +21,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 🎮 START CONTROL PANEL (Fixed)\n",
+        "# @title 🎮 START CONTROL PANEL (Syntax Fixed)\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, HTML\n",
         "\n",
-        "# UI\n",
+        "# 1. UI Setup\n",
         "style = \"\"\"<style>.lotto-box{background:#f8f9fa;padding:15px;border-radius:10px;border:1px solid #ddd;}.lbl{font-weight:bold;font-size:16px;margin-bottom:10px;display:block;}</style>\"\"\"\n",
         "display(HTML(style))\n",
         "\n",
@@ -35,57 +35,62 @@
         "out_log = widgets.Output(layout={'border':'1px solid #ccc','height':'150px','overflow':'auto','margin_top':'10px'})\n",
         "progress = widgets.IntProgress(value=0, max=100, layout=widgets.Layout(width='100%'))\n",
         "\n",
-        "# Bridge\n",
+        "# Bridge UI -> Logic\n",
         "global_ui = { \"btn\": btn_go, \"txt\": txt_uid, \"log\": out_log, \"bar\": progress }\n",
         "\n",
         "def on_click_wrapper(b):\n",
         "    if 'run_lotto_logic' in globals():\n",
         "        globals()['run_lotto_logic'](global_ui)\n",
         "    else:\n",
-        "        # Hier war der Fehler - jetzt korrigiert:\n",
         "        with out_log:\n",
-        "            print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\n",
+        "            print(\"⚠️ Bitte erst Zelle 2 (unten) ausführen!\")\n",
         "\n",
         "btn_go.on_click(on_click_wrapper)\n",
         "\n",
         "display(widgets.VBox([lbl, widgets.HBox([txt_uid, btn_go]), progress, out_log]))\n",
         "\n",
-        "# --- STRONG AUTO DETECT ---\n",
+        "# 2. Strong Auto-Detect (JS)\n",
         "from google.colab import output\n",
-        "js_debug = \"\"\"\n",
+        "js_code = \"\"\"\n",
         "(function(){\n",
         "  try {\n",
-        "      var url = window.location.href;\n",
-        "      var hash = window.location.hash;\n",
-        "      return {url: url, hash: hash};\n",
-        "  } catch(e) { return {error: e.toString()}; }\n",
+        "      // Versuche Hash zu lesen\n",
+        "      var h = window.location.hash;\n",
+        "      // Wenn leer, versuche, ob wir Zugriff auf Parent haben (oft blockiert, aber einen Versuch wert)\n",
+        "      if (!h) {\n",
+        "          try { h = window.parent.location.hash; } catch(e){}\n",
+        "      }\n",
+        "      return h || \"\";\n",
+        "  } catch(e) { return \"Error: \" + e.toString(); }\n",
         "})();\n",
         "\"\"\"\n",
         "\n",
         "try:\n",
-        "    # 1. Try to read\n",
-        "    data = output.eval_js(js_debug)\n",
+        "    # Get hash string\n",
+        "    hash_str = output.eval_js(js_code)\n",
         "\n",
-        "    # 2. Parse Logic\n",
-        "    hash_str = data.get('hash', '')\n",
+        "    # Debug-Output\n",
+        "    # with out_log: print(f\"Debug Hash Raw: {hash_str}\")\n",
+        "\n",
         "    found_id = \"\"\n",
-        "\n",
-        "    # Parse #userId=123\n",
-        "    if 'userId=' in hash_str:\n",
-        "        parts = hash_str.split('userId=')\n",
+        "    if hash_str and \"userId=\" in hash_str:\n",
+        "        # Parse userId=123 (auch wenn noch anderer Kram drumherum ist)\n",
+        "        parts = hash_str.split(\"userId=\")\n",
         "        if len(parts) > 1:\n",
-        "            found_id = parts[1].split('&')[0]\n",
+        "            # Nehme alles bis zum nächsten & oder Ende\n",
+        "            found_id = parts[1].split(\"&\")[0]\n",
         "\n",
         "    if found_id:\n",
         "        txt_uid.value = str(found_id)\n",
-        "        with out_log: print(f\"✅ Auto-Login: User {found_id}\")\n",
+        "        with out_log: print(f\"✅ Auto-Login erfolgreich: User {found_id}\")\n",
         "    else:\n",
         "        with out_log:\n",
-        "            print(\"ℹ️ Kein User ID im Link gefunden.\")\n",
-        "            print(\"👉 Bitte öffnen Sie Colab über den Link in der App!\")\n",
+        "            print(\"ℹ️ Konnte ID nicht automatisch lesen.\")\n",
+        "            print(f\"URL Status: {hash_str if hash_str else 'Kein Hash sichtbar'}\")\n",
+        "            print(\"👉 Bitte ID manuell eingeben.\")\n",
         "\n",
         "except Exception as e:\n",
-        "    with out_log: print(f\"Debug Error: {e}\")"
+        "    with out_log: print(f\"JS Error: {e}\")"
       ],
       "metadata": {
         "id": "20ACDMrZi0o_"
